# Adaptive-Medical-Learning-System

./: .editorconfig  .env.example  .gitignore  BOOTSTRAP_COMPLETE.md  BUG_FIXES_SUMMARY.md  CODE_OF_CONDUCT.md  COMPLETION_REPORT.md  CONTRIBUTING.md  IMPLEMENTATION_COMPLETE.md  LICENSE  PHASE2_EXECUTION_SUMMARY.md  QUICKSTART.md  README.md  RELEASE_WORKFLOW_FIXES.md  SECURITY.md  SECURITY_FIXES.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task.md
.github/scripts/: bump_version.py  changelog_from_commits.py
.github/workflows/: ci.yml  healthcheck.yml  release.yml
backend/: .env.example  .gitignore  DEPLOYMENT_CHECKLIST.md  Dockerfile  PHASE2_IMPLEMENTATION.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  db.py  main.py
backend/app/auth/: __init__.py  router.py  schemas.py  service.py
backend/app/content/: __init__.py  embedding.py  ingestion.py  llm_client.py  models.py  router.py  schemas.py  service.py  splitter.py
backend/app/mastery/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/quiz/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/recommender/: __init__.py  planner.py  router.py  schemas.py  service.py
backend/app/users/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/utils/: security.py  timestamps.py
backend/migrations/: README  env.py
backend/scripts/: __init__.py  init_db.py  setup.sh
frontend/: README.md  analysis_options.yaml  pubspec.yaml
frontend/android/app/src/main/: AndroidManifest.xml
frontend/android/app/src/main/kotlin/com/example/frontend/: MainActivity.kt
frontend/lib/: main.dart
frontend/lib/core/api/: auth_api_service.dart  content_api_service.dart  dashboard_api_service.dart  plan_api_service.dart  quiz_api_service.dart
frontend/lib/core/models/: mastery_model.dart  quiz_question_model.dart  study_plan_model.dart  summary_model.dart
frontend/lib/core/storage/: secure_storage.dart
frontend/lib/core/theme/: app_theme.dart
frontend/lib/features/auth/: auth_provider.dart  login_screen.dart
frontend/lib/features/dashboard/: dashboard_provider.dart  dashboard_screen.dart
frontend/lib/features/quiz/: quiz_provider.dart  quiz_screen.dart
frontend/lib/features/study_plan/: study_plan_provider.dart  study_plan_screen.dart
frontend/lib/features/summary/: summary_provider.dart  summary_screen.dart
frontend/lib/widgets/: keypoint_card.dart  mastery_card.dart  plan_block_card.dart  quiz_option_tile.dart
frontend/test/: widget_test.dart
